clang/test/BSC/Negative/Trait/r1/definition_11/definition_11.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  int foo(This* this);
};

int int::foo(int* this) {
  return 0;
}

impl trait F for int;

int main() {
  int a = 1;
  trait F* f = &a;
  f->get(); // expected-error {{no member named 'get' in 'struct __Trait_F_Vtable'}}
  return 0;
}
